--- a/lab2/index.html
+++ b/lab2/index.html
@@ -15,7 +15,7 @@
             <a href="info.html">Informação</a>
         </nav>
 
-        <img src="imagem1/imiagem2.jpg"width="300" height="200">
+        <img src="imagem1/imiagem2.jpg"width="300" height="200" alt="Imagem aerea de Barcelona">
     </header>
 
     <footer>
