--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -11,4 +11,10 @@
         <li><a href="lab3/index.html">Open Lab 3</a> - Formulários</li>
     </ul>
 </body>
+<footer>
+    <p>Afonso Lopes - A22204080 </p>
+    <p>ULHT</p>
+    <p>Ano: 2024/2025</p>
+</footer>
 </html>
+
