--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
-    <title>Labs</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-    <h1>Labs</h1>
-    <ul>
-        <li><a href="lab1/index.html">Open Lab 1</a> - Conhecer a Internet</li>
-        <li><a href="lab2/index.html">Open Lab 2</a> - HTML "A minha Cidade"</li>
-        <li><a href="lab3/index.html">Open Lab 3</a> - Formulários</li>
-    </ul>
+    
 </body>
-<footer>
-    <p>Afonso Lopes - A22204080 </p>
-    <p>ULHT</p>
-    <p>Ano: 2024/2025</p>
-</footer>
 </html>
-
