--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Afonso Lopes</title>
 </head>
 <body>
-    
+    <h1>Test</h1>
+    <p> <a href="https://moodle.ensinolusofona.pt/course/view.php?id=28717">link</a>.</p>
+    <img src="images/diw.svg" alt="DIW Wordcloud">
 </body>
 </html>
