--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+
+    <header>
+        <h1>Bem-vindo!</h1>
+        <p>Escolha entre o Quiz sobre a cidade ou Planear a Viagem!</p>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="quiz.html">Quiz sobre a Cidade</a></li>
+            <li><a href="viagem.html">Planeie a Viagem</a></li>
+        </ul>
+    </nav>
+
 </body>
 </html>
