--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Afonso Lopes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Test</h1>
-    <p> <a href="https://moodle.ensinolusofona.pt/course/view.php?id=28717">link</a>.</p>
-    <img src="images/diw.svg" alt="DIW Wordcloud">
+    <h1>Olá!</h1>
+    <p><a href="https://moodle.ensinolusofona.pt/course/view.php?id=28717" style="color: #4CAF50;">Desenvolvimento de Interfaces Web</a></p>
+    <p>Nesta Unidade Curricular de abordaremos as seguintes Tecnologias Web :</p>
+    
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>React e Next.js</li>
+    </ul>
+
+    <p>--Laboratórios--</p>
+
+    <ul>
+        <li><a href="Lab1/teste.html">Open Lab 1 - Conhecer a Internet </a></li>
+        <li><a href="lab2/index.html">Open Lab 2 -"A minha Cidade" </a></li>
+        <li><a href="Lab3/index.html">Open Lab 3 - Formulários </a></li>
+    </ul>
+
+    <img src="imagens/pag in.jpg" alt="Desenvolvimento de Interfaces Web">
+
 </body>
 </html>
