--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,8 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>A minha Cidade</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -15,7 +17,7 @@
             <a href="info.html">Informação</a>
         </nav>
 
-        <img src="imagem1/imiagem2.jpg"width="300" height="200" alt="Imagem aerea de Barcelona">
+        <img src="images/imiagem2.jpg" alt="Imagem aerea de Barcelona">
     </header>
 
     <footer>
