--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>--Laboratórios--</p>
 
     <ul>
-        <li><a href="Lab1/teste.html">Open Lab 1 - Conhecer a Internet </a></li>
+        <li><a href="Lab1/index.html">Open Lab 1 - Conhecer a Internet </a></li>
         <li><a href="lab2/index.html">Open Lab 2 -"A minha Cidade" </a></li>
         <li><a href="Lab3/index.html">Open Lab 3 - Formulários </a></li>
     </ul>
