--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Olá!</h1>
-    <p><a href="https://moodle.ensinolusofona.pt/course/view.php?id=28717" style="color: #4CAF50;">Desenvolvimento de Interfaces Web</a></p>
+    <p><a href="https://moodle.ensinolusofona.pt/course/view.php?id=28717" style="color: #c95a0b;">Desenvolvimento de Interfaces Web</a></p>
     <p>Nesta Unidade Curricular de abordaremos as seguintes Tecnologias Web :</p>
     
     <ul>
