--- a/lab2/quiz.html
+++ b/lab2/quiz.html
@@ -9,9 +9,7 @@
 <body>
 
     <header>
-        <h1><h1 style="color: white;">Quiz sobre a Cidade</h1>
-        <nav>
-
+        <h1>Quiz sobre a Cidade</h1>
     </header>
 
     <main>
@@ -69,6 +67,7 @@
 
                 <input type="reset" value="Redefinir formulário"><br>
                 <input type="submit" value="Enviar Quizz">
+
             </fieldset>
         </form>
     </main>
