--- a/lab2/viagem.html
+++ b/lab2/viagem.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1 style="color: white;">Planeie a Viagem</h1>
+        <h1 style="color: #c95a0b;">Planeie a Viagem</h1>
 
 
     </header>
