--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -7,7 +7,7 @@
 <body>
 
     <header>
-        <h1>Bem-vindo!</h1>
+        <h1 style="color: white;">Bem Vindo!</h1>
         <p>Escolha entre o Quiz sobre a cidade ou Planear a Viagem!</p>
     </header>
 
@@ -17,12 +17,9 @@
             <li><a href="viagem.html">Planeie a Viagem</a></li>
         </ul>
     </nav>
-<img src="imagens/imiagem2.png" alt="Imagem aérea de Barcelona">
+    <img src="images/imiagem2.png" alt="Imagem aérea de Barcelona">
 
 </body>
-
-
-
 
 
 
