--- a/Lab4/quiz.html
+++ b/Lab4/quiz.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1><h1 style="color: white;">Quiz sobre a Cidade</h1>
+        <h1>Quiz sobre a Cidade</h1>
         <nav>
 
     </header>
