--- a/lab2/index.html
+++ b/lab2/index.html
@@ -15,13 +15,15 @@
             <a href="local.html">Localização</a>
             <a href="multimedia.html">Multimédia</a>
             <a href="info.html">Informação</a>
+            <a href="quiz.html">Quiz</a>
+            <a href="viagem.html">Viagem</a>
         </nav>
 
         <img src="images/imiagem2.jpg" alt="Imagem aerea de Barcelona">
     </header>
 
     <footer>
-        <p>DIW 2024</p>
+        
     </footer>
 </body>
 </html>
