--- a/lab2/local.html
+++ b/lab2/local.html
@@ -13,7 +13,12 @@
             <a href="local.html">Localização</a>
             <a href="multimedia.html">Multimédia</a>
             <a href="info.html">Informação</a>
+            <a href="quiz.html">Quiz</a>
+            <a href="viagem.html">Viagem</a>
         </nav>
+       
+
+
     </header>
 
     <main>
