--- a/lab2/multimedia.html
+++ b/lab2/multimedia.html
@@ -8,12 +8,14 @@
 <body>
     <main>
         <header>
-            <h1>A minha Cidade</h1>
+            <h1>Multimédia</h1>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="local.html">Localização</a>
                 <a href="multimedia.html">Multimédia</a>
                 <a href="info.html">Informação</a>
+                <a href="quiz.html">Quiz</a>
+                <a href="viagem.html">Viagem</a>
             </nav>
         </header>
 
