--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 
     <ul>
         <li><a href="Lab1/index.html">Open Lab 1 - Conhecer a Internet </a></li>
-        <li><a href="lab2/index.html">Open Lab 2 -"A minha Cidade" </a></li>
+        <li><a href="Lab5/index.html">Open Lab 2/4 -"A minha Cidade" </a></li>
         <li><a href="Lab3/index.html">Open Lab 3 - Formulários </a></li>
+        <li><a href="Lab5/index.html">Open Lab 5 - Pontos de interesse </a></li>
     </ul>
 
     <img src="imagens/pag in.jpg" alt="Desenvolvimento de Interfaces Web">
