--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BARCELONA</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>A minha Cidade</h1>
+        <h1 style="color: white;">Barcelona</h1>
+
         
         <nav>
             <a href="index.html">Home</a>
@@ -17,6 +17,10 @@
             <a href="info.html">Informação</a>
             <a href="quiz.html">Quiz</a>
             <a href="viagem.html">Viagem</a>
+            <a href="pontosinteresse.html">Pontos de interesse</a>
+            <a href="capitais.html">Capitais</a>
+
+            
         </nav>
 
         <img src="images/imiagem2.jpg" alt="Imagem aerea de Barcelona">
