--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Afonso Lopes</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet"href="responive.css">
 </head>
 <body>
     <h1>Olá!</h1>
     <p><a href="https://moodle.ensinolusofona.pt/course/view.php?id=28717" style="color: #c95a0b;">Desenvolvimento de Interfaces Web</a></p>
-    <p>Nesta Unidade Curricular de abordaremos as seguintes Tecnologias Web :</p>
+    <p>Nesta Unidade Curricular abordaremos as seguintes Tecnologias Web:</p>
     
     <ul>
         <li>HTML</li>
@@ -24,12 +25,14 @@
         <li><a href="Lab5/index.html">Open Lab 2/4 -"A minha Cidade" </a></li>
         <li><a href="Lab3/index.html">Open Lab 3 - Formulários </a></li>
         <li><a href="Lab5/index.html">Open Lab 5 - Pontos de interesse </a></li>
+        <li><a href= "Lab6/index.html">Open Lab6 - Cidade com Layout Responsivo</li>
     </ul>
 
-    <img src="imagens/pag in.jpg" alt="Desenvolvimento de Interfaces Web">
+    <div class="image-container">
+        <img src="imagens/pag in.jpg" alt="Desenvolvimento de Interfaces Web" class="responsive-image">
+    </div>
 
+ 
 
-
-    
 </body>
 </html>
