--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <li><a href="Lab3/index.html">Open Lab 3 - Formulários </a></li>
         <li><a href="Lab5/index.html">Open Lab 5 - Pontos de interesse </a></li>
         <li><a href= "Lab6/index.html">Open Lab6 - Cidade com Layout Responsivo</li>
+        <li><a href= "Lab7/index.html">Open Lab7</a></li>
+        <li><a href="Lab8/index.html">Open Lab8</a></li>
+        <li><a href="Lab9/index.html">Open Lab9 - Loja</a></li>
     </ul>
 
     <div class="image-container">
