--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li><a href= "Lab7/index.html">Open Lab7</a></li>
         <li><a href="Lab8/index.html">Open Lab8</a></li>
         <li><a href="Lab9/index.html">Open Lab9 - Loja</a></li>
+        <li><a href="Lab10/index.html">Open Lab10</a></li>
     </ul>
 
     <div class="image-container">
