--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Primeira Página</title>
+   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
@@ -25,8 +26,25 @@
     <li>JavaScript</li>
     <li>React e Next.js</li>
   </ul>
+  <p> Iremos criar soluções criativas</p>
+  <nav>       
+    <ul>  
+      <li> <a  href="lab1/index.html">Lab1</a> </a></li>
+      <li> <a  href="Lab2/index.html">Lab2</a> </a></li>
+    </ul>
+
+
+  </nav>
+
+
+  
+
+
+
+
+
   <p>Iremos criar soluções criativas!</p>
-  <img src="imagens/image.png" alt="Desenvolvimento de Interfaces Web">
+  <img src="imagens/image.png" alt="Desenvolvimento de Interfaces Web">img { width: 300px}
 </main>
 
 <footer>
