--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
         <p>Experiências com CSS/JS.</p>
         <a class="btn" href="Lab3/index.html">Abrir</a>
       </article>
+      <article class="card">
+  <h3>Lab 4</h3>
+  <p>CSS Grid: layout 2D com áreas e responsividade.</p>
+  <a class="btn" href="lab4/index.html">Abrir</a>
+</article>
+
+<article class="card">
+  <h3>Lab 5</h3>
+  <p>Introdução ao JavaScript: eventos e manipulação do DOM.</p>
+  <a class="btn" href="lab5/index.html">Abrir</a>
+</article>
+
     </div>
   </section>
 
