produtos.js nao esta a funcionar

--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
   <a class="btn" href="lab5/index.html">Abrir</a>
 </article>
 
+<article class="card">
+  <h4 lab6 ></h4>
+  <p>Loja</p>
+  <a class="btn" href="Lab6/index.html">Abrir</a>
+</article>
+
     </div>
   </section>
 
