produtos.js n funciona

--- a/Lab6/index.html
+++ b/Lab6/index.html
@@ -1,30 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DeisiShop - Produtos</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Loja Online</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>DeisiShop - Produtos Geek</h1>
-        <nav>
-            <a href="#">Produtos</a>
-            <a href="#">Cesto</a>
-        </nav>
-    </header>
 
-    <main>
-        <h2>Selecione os seus Produtos</h2> <div id="products-list" class="products-container">
-            </div>
-    </main>
+  <header>
+    <h1>Loja Online</h1>
+  </header>
 
-    <footer>
-        <p>&copy; 2025 DeisiShop. Todos os direitos reservados.</p>
-    </footer>
+  <nav>
+    <ul>
+      <li><a href="#">Produtos</a></li>
+      <li><a href="#">Cesto</a></li>
+    </ul>
+  </nav>
 
-    <script src="produtos.js"></script>
-    <script src="main.js"></script>
+  <main>
+    <section>
+      <h2>Selecione os seus Produtos</h2>
+      <div class="produto-container">
+        <!-- Produtos serão inseridos dinamicamente aqui -->
+      </div>
+    </section>
+
+    <section>
+      <h2>Produtos Selecionados</h2>
+      <div class="cesto-container">
+        <p>Custo total: 0€</p>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Loja de Produtos</p>
+  </footer>
+
+  <script src="produtos.js"></script> <!-- Carregando os produtos -->
+  <script src="main.js"></script> <!-- Carregando o JavaScript que manipula o DOM -->
+
 </body>
 </html>
