--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Landing Page — A minha Cidade</title>
+  <title>Landing Page — Desenvolvimento de Interfaces Web</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header class="site-header">
-    <h1 class="logo">A minha Cidade</h1>
+    <h1 class="logo">Desenvolvimento de Interfaces Web</h1>
     <nav aria-label="Principal">
       <ul>
         <li><a href="#home">Home</a></li>
@@ -23,10 +23,10 @@
     <img
       class="hero-img"
       src="imagens/Bogota-Cityscape-HD-Wallpapers-122032.jpg"
-      alt="Panorâmica de Bogotá ao entardecer">
+      alt="">
     <div class="hero-content">
       <div class="hero-box">
-  <h2>Bogotá</h2>
+  <h2>Desenvolvimento de Interfaces Web</h2>
   <p>Explora os meus projetos de Desenvolvimento de Interfaces Web.</p>
 
       <a class="btn-cta" href="#projetos">Ver projetos</a>
