--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
   <a class="btn" href="Lab6/index.html">Abrir</a>
 </article>
 
+<article class="card">
+  <h4 lab7 ></h4>
+  <p></p>
+  <a class="btn" href="lab7/index.html">Abrir</a>
+</article>
+
+
     </div>
   </section>
 
